# ShowRunner

./: .gitignore  CONTRIBUTING.md  README.md  alembic.ini  main.py  pyproject.toml  show.db  show.toml  zensical.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: cookbook.md  getting-started.md  index.md  plugin-load-demo.md
docs/about/: history.md  overview.md  plugin-architecture.md  tools.md
docs/architecture/: plugin-architecture.md
docs/cookbook/: api.md  cues.md  index.md  meta-video.md  pdf-export.md  plugins-create.md  plugins-lifecycle.md  plugins.md  scripts.md  shows.md  tests.md  ui-testing.md
docs/production/: intro-video.md  remediation.md
docs/ref/: cli.md  index.md  plugins.md
docs/usage/: config.md  first-show.md  getting-started.md
examples/: setup_intro.py
examples/scripts/: Hamlet.fountain  Pirates-of-Penzance.fountain  showrunner-intro.fountain
migrations/versions/: 2a50c1c7c24c_cue_number_nullable.py
scripts/: capture_ui  dev  docs
src/showrunner/: __init__.py  app.py  cli.py  config.py  database.py  hookspecs.py  models.py  pdf_layout.toml  plugin.py  ui.py  utils.py
src/showrunner/migrations/: __init__.py  alembic.ini  cli.py  env.py
src/showrunner/migrations/versions/: 61dc746fdbf5_cue_number_int_to_str.py
src/showrunner/plugins/: __init__.py  admin.py  cmd.py  comms.py  dashboard.py  db.py  designer.py  lighter.py  logger.py  mixer.py  printer.py  programmer.py  prompter.py  recorder.py  scripter.py  stage_manager.py  stopper.py  voicer.py
src/showrunner/templates/sqladmin/: layout.html
tests/: conftest.py  test_api.py  test_av_plugins.py  test_config.py  test_database.py  test_models.py  test_plugins.py
tests/e2e/: conftest.py  test_programmer_e2e.py
tests/ui/: conftest.py  test_dashboard.py  test_programmer.py  test_scripter.py
