[project]
name = "showrunner"
version = "0.1.0"
description = "A collection of tools for live performances including script parsing, cue management, and more."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi>=0.135.2",
    "httpx>=0.27",
    "nicegui>=2.0",
    "pluggy>=1.6.0",
    "screenplay-tools>=0.0.10",
    "sqlmodel>=0.0.37",
    "watchfiles>=1.0.0",
]

[project.scripts]
sr = "showrunner.cli:cli"

[project.optional-dependencies]
admin = ["sqladmin>=0.20.1"]
cli = ["typer>=0.24.1"]
pdf = ["fpdf2>=2.8.7"]
all = ["showrunner[admin]", "showrunner[cli]", "showrunner[pdf]"]

[dependency-groups]
dev = ["black>=26.3.1", "pytest>=9.0.2", "ruff>=0.15.8", "uvicorn>=0.42.0"]
docs = ["zensical>=0.0.31"]
# NiceGUI page tests (no browser) — install with: uv sync --group ui-test
ui-test = [
    "pytest-asyncio>=0.23",
]
# Full-browser Playwright E2E tests — install with: uv sync --group e2e
# After install run: playwright install chromium
e2e = [
    "pytest-playwright>=0.5.0",
]
# AV tool integrations — install with: uv sync --group av
av = [
    "simpleobsws>=1.0",    # ShowRecorder: OBS websocket v5 protocol client
    "python-osc>=1.8",     # ShowMixer + ShowProgrammer: OSC client
    "kokoro>=0.9",         # ShowVoicer: local neural TTS engine
    "soundfile>=0.12",     # ShowVoicer: WAV file output
    "numpy>=1.24",         # ShowVoicer: audio array concatenation
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "ui: NiceGUI page-level tests (no browser, uses user_simulation)",
    "e2e: full-browser Playwright end-to-end tests (requires live server)",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Plugins are loaded in dependency order (DB before Admin/Dashboard), not alphabetically.
"src/showrunner/plugins/__init__.py" = ["I001"]
# Inline JS strings in the scripter UI are intentionally long.
"src/showrunner/plugins/scripter.py" = ["E501"]
# Example scripts contain long cue notes data literals — readability over line length.
"examples/*.py" = ["E501"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"
