[project]
name = "showrunner"
version = "0.1.0"
description = "A collection of tools for live performances including script parsing, cue management, and more."
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.2",
    "loguru>=0.7.3",
    "nicegui>=2.0",
    "pluggy>=1.6.0",
    "screenplay-tools>=0.0.10",
    "sqlmodel>=0.0.37",
    "watchfiles>=1.0.0",
]

[project.scripts]
sr = "showrunner.cli:cli"

[project.optional-dependencies]
admin = ["sqladmin>=0.20.1"]
cli = ["typer>=0.24.1"]
pdf = ["fpdf2>=2.8.7"]
all = ["showrunner[admin]", "showrunner[cli]", "showrunner[pdf]"]

[dependency-groups]
dev = ["black>=26.3.1", "pytest>=9.0.2", "ruff>=0.15.8", "uvicorn>=0.42.0"]
docs = ["zensical>=0.0.31"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# Plugins are loaded in dependency order (DB before Admin/Dashboard), not alphabetically.
"src/showrunner/plugins/__init__.py" = ["I001"]
# Inline JS strings in the scripter UI are intentionally long.
"src/showrunner/plugins/scripter.py" = ["E501"]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"
